added new lines of code to css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,24 @@
         </nav>
     </header>
 
-    <section style="height: 1000px;"></section>
+    <main>
+        <section class="showcase-area">
+            <div class="container">
+                <div class="showcase-info">
+                    <h2 class="sub-heading">Product Designer | Frontend Developer</h2>
+                    <h1 class="heading">Ottobong Christopher.</h1>
+                    <p class="text">I am a product designer and frontend developer with a passion for building user centered products. Let's work together.</p>
+
+                    <div class="cta">
+                        <a href="#" class="btn">Contact me</a>
+                        <a href="#" class="btn secondary-btn">Download CV</a>
+                    </div>
+                </div>
+
+                <div class="showcase-image"></div>
+            </div>
+        </section>
+    </main>
 
 
     <!-- JavaScript file -->
