added new lines of code to css

--- a/index.html
+++ b/index.html
@@ -55,12 +55,19 @@
                     <p class="text">I am a product designer and frontend developer with a passion for building user centered products. Let's work together.</p>
 
                     <div class="cta">
-                        <a href="#" class="btn">Contact me</a>
-                        <a href="#" class="btn secondary-btn">Download CV</a>
+                        <a href="mailto:christopherottobong@gmail.com" class="btn">Contact me</a>
+                        <a href="./assets/Ottobong Christopher Resume_.pdf" download class="btn secondary-btn">Download CV</a>
                     </div>
                 </div>
 
-                <div class="showcase-image"></div>
+                <div class="showcase-image">
+                    <img src="./img/smiling-alt.png" alt="">
+                    <img src="./img/colorgrid2.png" class="shape dots" alt="">
+                    <img src="./img/rectangle.png" class="shape rectangle" alt="">
+                    <img src="./img/rectangle.png" class="shape rectangle1" alt="">
+                    <img src="./img/colorgrid2.png" class="shape dots1" alt="">
+                    <img src="./img/colorgrid3.png" class="shape dots2" alt="">
+                </div>
             </div>
         </section>
     </main>
