added new lines of code to css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./img/CoverIcon.png" type="image/x-icon">
+    <!-- Scroll reveal library -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- ------------Iconscout library link------------ -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
@@ -61,7 +63,7 @@
                 </div>
 
                 <div class="showcase-image">
-                    <img src="./img/smiling-alt.png" alt="">
+                    <img src="./img/handsfold-alt.png" alt="">
                     <img src="./img/colorgrid2.png" class="shape dots" alt="">
                     <img src="./img/rectangle.png" class="shape rectangle" alt="">
                     <img src="./img/rectangle.png" class="shape rectangle1" alt="">
@@ -70,10 +72,27 @@
                 </div>
             </div>
         </section>
+
+        <section class="about">
+            <div class="container">
+                <div class="about-grid"></div>
+                <div class="about-info">
+                    <h2 class="sub-heading">What I do</h2>
+                    <h1 class="heading">Better Designs, Better Experience</h1>
+                    <p class="text">Creating user experience that solves real life problems and drive business growth is what I do. I take problems, define them, create solutions, test the solutions  and implement these solutions.</p>
+
+                    <div class="cta">
+                        <a href="mailto:christopherottobong@gmail.com" class="btn">Contact me</a>
+                        <a href="./assets/Ottobong Christopher Resume_.pdf" download class="btn secondary-btn">Download CV</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
 
     <!-- JavaScript file -->
     <script src="script.js"></script>
+
 </body>
 </html>
