added new files to directory and new lines of code to html, css and javascript files

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </header>
 
     <main>
+
+        <!-- Hero Section -->
         <section class="showcase-area">
             <div class="container">
                 <div class="showcase-info">
@@ -73,12 +75,67 @@
             </div>
         </section>
 
-        <section class="about">
+        <!-- Features -->
+        <section class="about section">
             <div class="container">
-                <div class="about-grid"></div>
+                <div class="about-grid">
+                    
+                    <div class="about-card">
+                        <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="st1" fill-rule="evenodd" clip-rule="evenodd" d="M18.2939 0.160035C24.2223 0.560753 26.4702 7.6031 30.1262 12.2871C33.6972 16.8621 39.5839 20.6505 38.7732 26.3972C37.9228 32.4252 32.231 36.7875 26.4158 38.5881C21.4303 40.1318 16.7258 37.0062 12.0596 34.6687C7.53784 32.4036 2.29808 30.5413 0.744406 25.7285C-0.935555 20.5245 1.17554 15.048 4.27012 10.5394C7.73264 5.4947 12.1892 -0.252603 18.2939 0.160035Z" fill="#001932" fill-opacity="0.08"/>
+                            <path class="st2" d="M19 20C21.7614 20 24 17.7614 24 15C24 12.2386 21.7614 10 19 10C16.2386 10 14 12.2386 14 15C14 17.7614 16.2386 20 19 20Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st3" d="M10.4099 30C10.4099 26.13 14.2599 23 18.9999 23" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st4" d="M25.2 29.4C26.9673 29.4 28.4 27.9673 28.4 26.2C28.4 24.4327 26.9673 23 25.2 23C23.4327 23 22 24.4327 22 26.2C22 27.9673 23.4327 29.4 25.2 29.4Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path d="M29 30L28 29" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <h3>User Research</h3>
+                    </div>
+
+                    <div class="about-card">
+                        <svg  width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="st1" fill-rule="evenodd" clip-rule="evenodd" d="M18.1429 0.0209964C24.0713 0.421715 26.3192 7.46406 29.9752 12.148C33.5462 16.723 39.4329 20.5114 38.6222 26.2582C37.7718 32.2862 32.08 36.6485 26.2648 38.4491C21.2793 39.9928 16.5748 36.8671 11.9086 34.5297C7.38684 32.2646 2.14708 30.4023 0.593405 25.5895C-1.08656 20.3855 1.02454 14.9089 4.11912 10.4003C7.58164 5.35566 12.0382 -0.391641 18.1429 0.0209964Z" fill="#001932" fill-opacity="0.08"/>
+                            <path class="st2" d="M17.7501 30.5H20.2701C21.2301 30.5 21.8501 29.82 21.6701 28.99L21.2601 27.1801H16.7601L16.3501 28.99C16.1701 29.77 16.8501 30.5 17.7501 30.5Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st3" d="M21.2601 27.1701L22.9901 25.63C23.9601 24.77 24.0001 24.17 23.2301 23.2L20.18 19.33C19.54 18.52 18.4901 18.52 17.8501 19.33L14.8001 23.2C14.0301 24.17 14.03 24.8 15.04 25.63L16.7701 27.1701" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st4" d="M19.01 19.12V21.65" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st5" d="M19.52 13H18.52C17.97 13 17.52 12.55 17.52 12V11C17.52 10.45 17.97 10 18.52 10H19.52C20.07 10 20.52 10.45 20.52 11V12C20.52 12.55 20.07 13 19.52 13Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st6" d="M10.27 22.17H11.27C11.82 22.17 12.27 21.72 12.27 21.17V20.17C12.27 19.62 11.82 19.1699 11.27 19.1699H10.27C9.72002 19.1699 9.27002 19.62 9.27002 20.17V21.17C9.27002 21.72 9.72002 22.17 10.27 22.17Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st7" d="M27.73 22.17H26.73C26.18 22.17 25.73 21.72 25.73 21.17V20.17C25.73 19.62 26.18 19.1699 26.73 19.1699H27.73C28.28 19.1699 28.73 19.62 28.73 20.17V21.17C28.73 21.72 28.28 22.17 27.73 22.17Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st8" d="M17.52 11.5601C13.71 12.0101 10.75 15.24 10.75 19.17" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st9" d="M27.25 19.17C27.25 15.25 24.31 12.0301 20.52 11.5601" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+
+                        <h3>Visual Design</h3>
+                    </div>
+
+                    <div class="about-card">
+                        <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path class="st1" fill-rule="evenodd" clip-rule="evenodd" d="M18.1429 0.0209964C24.0713 0.421715 26.3192 7.46406 29.9752 12.148C33.5462 16.723 39.4329 20.5114 38.6222 26.2582C37.7718 32.2862 32.08 36.6485 26.2648 38.4491C21.2793 39.9928 16.5748 36.8671 11.9086 34.5297C7.38684 32.2646 2.14708 30.4023 0.593405 25.5895C-1.08656 20.3855 1.02454 14.9089 4.11912 10.4003C7.58164 5.35566 12.0382 -0.391641 18.1429 0.0209964Z" fill="#001932" fill-opacity="0.08"/>
+                            <path class="st2-a" d="M15.38 19L17.79 21.42L22.62 16.58" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st3" d="M17.75 9.44995C18.44 8.85995 19.57 8.85995 20.27 9.44995L21.85 10.8099C22.15 11.0699 22.71 11.2799 23.11 11.2799H24.81C25.87 11.2799 26.74 12.1499 26.74 13.2099V14.9099C26.74 15.2999 26.95 15.8699 27.21 16.1699L28.57 17.7499C29.16 18.4399 29.16 19.5699 28.57 20.2699L27.21 21.8499C26.95 22.1499 26.74 22.7099 26.74 23.1099V24.8099C26.74 25.8699 25.87 26.7399 24.81 26.7399H23.11C22.72 26.7399 22.15 26.9499 21.85 27.2099L20.27 28.5699C19.58 29.1599 18.45 29.1599 17.75 28.5699L16.17 27.2099C15.87 26.9499 15.31 26.7399 14.91 26.7399H13.18C12.12 26.7399 11.25 25.8699 11.25 24.8099V23.0999C11.25 22.7099 11.04 22.1499 10.79 21.8499L9.44 20.2599C8.86 19.5699 8.86 18.4499 9.44 17.7599L10.79 16.1699C11.04 15.8699 11.25 15.3099 11.25 14.9199V13.1999C11.25 12.1399 12.12 11.2699 13.18 11.2699H14.91C15.3 11.2699 15.87 11.0599 16.17 10.7999L17.75 9.44995Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+
+                        <h3>User Testing</h3>
+                    </div>
+
+                    <div class="about-card">
+                        <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg"> 
+                            <path class="st1" fill-rule="evenodd" clip-rule="evenodd" d="M18.1429 0.0209964C24.0713 0.421715 26.3192 7.46406 29.9752 12.148C33.5462 16.723 39.4329 20.5114 38.6222 26.2582C37.7718 32.2862 32.08 36.6485 26.2648 38.4491C21.2793 39.9928 16.5748 36.8671 11.9086 34.5297C7.38684 32.2646 2.14708 30.4023 0.593405 25.5895C-1.08656 20.3855 1.02454 14.9089 4.11912 10.4003C7.58164 5.35566 12.0382 -0.391641 18.1429 0.0209964Z" fill="#001932" fill-opacity="0.08"/>
+                            <path class="st2" d="M12 16V23" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st3" d="M12.25 15.5C14.0449 15.5 15.5 14.0449 15.5 12.25C15.5 10.4551 14.0449 9 12.25 9C10.4551 9 9 10.4551 9 12.25C9 14.0449 10.4551 15.5 12.25 15.5Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st4" d="M12 29C13.6569 29 15 27.6569 15 26C15 24.3431 13.6569 23 12 23C10.3431 23 9 24.3431 9 26C9 27.6569 10.3431 29 12 29Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st5" d="M26 29C27.6569 29 29 27.6569 29 26C29 24.3431 27.6569 23 26 23C24.3431 23 23 24.3431 23 26C23 27.6569 24.3431 29 26 29Z" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                            <path class="st6" d="M12.13 16C12.58 17.75 14.18 19.05 16.07 19.04L19.5 19.03C22.12 19.02 24.35 20.7 25.17 23.04" stroke="#001932" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+
+                        <h3>Prototyping</h3>
+                    </div>
+                </div>
+                
                 <div class="about-info">
+                    <img src="./img/colorgrid1.png" class="shape about-dots" alt="">
+
                     <h2 class="sub-heading">What I do</h2>
-                    <h1 class="heading">Better Designs, Better Experience</h1>
+                    <h1 class="heading">Better Designs,<br> Better Experience</h1>
                     <p class="text">Creating user experience that solves real life problems and drive business growth is what I do. I take problems, define them, create solutions, test the solutions  and implement these solutions.</p>
 
                     <div class="cta">
@@ -88,7 +145,45 @@
                 </div>
             </div>
         </section>
+
+        <!-- Call-to-action Section --> 
+        <div class="skills section">
+            <div class="container">
+                <div class="skills-box">
+                    <div class="box-heading">
+                        <h3 class="sub-heading">My Experience</h3>
+                        <h1 class="heading">Let's Work Together</h1>
+                        <p class="text">
+                            Creating user experience that solves real life problems and drive business growth is what I do. I take problems, define them, create solutions, test the solutions and implement these solutions.
+                        </p>
+
+                        <a href="#" class="btn">Hire me</a>
+                    </div>
+
+                    <img src="./img/colorgrid3.png" class="skills dots2" alt="">
+                </div>
+            </div>
+        </div>
+
+        <!-- My services -->
+        <div class="services section">
+            <div class="container">
+                <div class="services-info">
+                    <h3 class="sub-heading">My Services</h3>
+                    <h1 class="heading">Things I do foy my Clients</h1>
+                    <p class="text">
+                        From offering in-depth user research, to helping with design and testing, I can hel bring your product to life.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <section style="height: 200px;"></section>
     </main>
+
+
+
+
 
 
     <!-- JavaScript file -->
