added new files to directory and new lines of code to html, css and javascript files

--- a/index.html
+++ b/index.html
@@ -174,6 +174,57 @@
                     <p class="text">
                         From offering in-depth user research, to helping with design and testing, I can hel bring your product to life.
                     </p>
+
+                    <!-- <div class="milestones">
+                        <div class="ml">
+                            <h2 class="number"><span data-target="5">0</span>+</h2>
+                            <h5>Years</h5>
+                        </div>
+                        <div class="ml">
+                            <h2 class="number"><span data-target="20">0</span>+</h2>
+                            <h5>Projects</h5>
+                        </div>
+                        <div class="ml">
+                            <h2 class="number"><span data-target="25">0</span>+</h2>
+                            <h5>Clients</h5>
+                        </div>
+                    </div> -->
+
+                    <div class="cta">
+                        <a href="" class="btn">Hire Me</a>
+                        <a href="./assets/Ottobong Christopher Resume_.pdf" download class="btn secondary-btn">Download CV</a>
+                    </div>
+                </div>
+
+                <div class="services-grid">
+                    <div class="srv-card">
+                        <div class="card-desc">
+                            <h3>UI/UX Design</h3>
+                            <p class="text">
+                                I design mobile app for Android & iOS, responsive websites and web app for ecommerce, Landing page, eLearning, ortfolio, corporate,Sales funnel & blogs using Figma and Adobe XD.
+                            </p>
+                        </div>
+                        <a href="" class="btn secondary-btn">View more</a>
+                    </div>
+                    <div class="srv-card">
+                        <div class="card-desc">
+                            <h3>Brand Identity Design</h3>
+                            <p class="text">
+                                I create brand identity designs, flyers, brochures and more.
+                            </p>
+                        </div>
+                        <a href="" class="btn secondary-btn">View more</a>
+                    </div>
+                    <div class="srv-card">
+                        <div class="card-desc">
+                            <h3>Frontend Development</h3>
+                            <p class="text">
+                                I develop responsive websites for ecommerce, Landing page, eLearning, portfolio, corporate,Sales funnel & blogs using Figma, Adobe XD, WordPress, Webflow, HTML, CSS and JavaSacript.
+                            </p>
+                        </div>
+                        <a href="" class="btn secondary-btn">View more</a>
+                    </div>
+
                 </div>
             </div>
         </div>
