added new files to directory and new lines of code to html, css and javascript files

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="container">
                 <div class="services-info">
                     <h3 class="sub-heading">My Services</h3>
-                    <h1 class="heading">Things I do foy my Clients</h1>
+                    <h1 class="heading">Things I do for my Clients</h1>
                     <p class="text">
                         From offering in-depth user research, to helping with design and testing, I can hel bring your product to life.
                     </p>
@@ -219,7 +219,16 @@
                         <div class="card-desc">
                             <h3>Frontend Development</h3>
                             <p class="text">
-                                I develop responsive websites for ecommerce, Landing page, eLearning, portfolio, corporate,Sales funnel & blogs using Figma, Adobe XD, WordPress, Webflow, HTML, CSS and JavaSacript.
+                                I develop responsive websites for ecommerce, Landing page, eLearning, portfolio, corporate, Sales funnel & blogs.
+                            </p>
+                        </div>
+                        <a href="" class="btn secondary-btn">View more</a>
+                    </div>
+                    <div class="srv-card">
+                        <div class="card-desc">
+                            <h3>No-Code Development</h3>
+                            <p class="text">
+                                I develop responsive websites for ecommerce, Landing page, eLearning, portfolio, corporate, Sales funnel & blogs using WordPress, Webflow and Bubble.
                             </p>
                         </div>
                         <a href="" class="btn secondary-btn">View more</a>
