Added new files and code

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </section>
 
         <!-- Call-to-action Section --> 
-        <div class="skills section">
+        <section class="skills section">
             <div class="container">
                 <div class="skills-box">
                     <div class="box-heading">
@@ -163,10 +163,12 @@
                     <img src="./img/colorgrid3.png" class="skills dots2" alt="">
                 </div>
             </div>
-        </div>
+        </section>
 
         <!-- My services -->
-        <div class="services section">
+        <section class="services section">
+            <img src="./img/colorgrid4.png" alt="" class="grid">
+            <img src="./img/colorgrid3.png" alt="" class="grid2">
             <div class="container">
                 <div class="services-info">
                     <h3 class="sub-heading">My Services</h3>
@@ -208,7 +210,7 @@
                     </div>
                     <div class="srv-card">
                         <div class="card-desc">
-                            <h3>Brand Identity Design</h3>
+                            <h3>Graphics Design</h3>
                             <p class="text">
                                 I create brand identity designs, flyers, brochures and more.
                             </p>
@@ -236,7 +238,29 @@
 
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!-- Portfolio -->
+        <section class="portfolio section">
+            <div class="container">
+                <div class="portfolio-header">
+                    <div class="portfolio-title">
+                        <div class="filter-btns">
+                            <h3 class="sub-heading">Portfolio</h3>
+                            <h1 class="heading">My Projects</h1>
+                        </div>
+
+                        <div class="filter-btns">
+                            <button class="filter-btn">All</button>
+                            <button class="filter-btn">UI/UX Design</button>
+                            <button class="filter-btn">Graphics Design</button>
+                            <button class="filter-btn">Frontend Development</button>
+                            <button class="filter-btn">No-Code Development</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section style="height: 200px;"></section>
     </main>
