Added new files and code

--- a/index.html
+++ b/index.html
@@ -245,19 +245,81 @@
             <div class="container">
                 <div class="portfolio-header">
                     <div class="portfolio-title">
-                        <div class="filter-btns">
-                            <h3 class="sub-heading">Portfolio</h3>
-                            <h1 class="heading">My Projects</h1>
+                        <h3 class="sub-heading">My Portfolio</h3>
+                        <h1 class="heading">My Projects</h1>
+                    </div>
+
+                    <div class="filter-btns">
+                        <button class="filter-btn">All</button>
+                        <button class="filter-btn">UI/UX Design</button>
+                        <button class="filter-btn">Graphics Design</button>
+                        <button class="filter-btn">Frontend Development</button>
+                        <button class="filter-btn">No-Code Development</button>
+                    </div>
+                </div>
+
+                <div class="portfolio-gallery">
+                    <div class="prt-card">
+                        <div class="prt-image">
+                            <img src="./img/Presentation.png" alt="">
                         </div>
 
-                        <div class="filter-btns">
-                            <button class="filter-btn">All</button>
-                            <button class="filter-btn">UI/UX Design</button>
-                            <button class="filter-btn">Graphics Design</button>
-                            <button class="filter-btn">Frontend Development</button>
-                            <button class="filter-btn">No-Code Development</button>
+                        <div class="prt-desc">
+                            <h3>Seemesave</h3>
+                            <a href="#" class="btn secondary-btn sm">Read more</a>
                         </div>
                     </div>
+                    <div class="prt-card">
+                        <div class="prt-image">
+                            <img src="./img/07-Notebook-Mockup.png" alt="">
+                        </div>
+
+                        <div class="prt-desc">
+                            <h3>Seemesave</h3>
+                            <a href="#" class="btn secondary-btn sm">Read more</a>
+                        </div>
+                    </div>
+                    <div class="prt-card">
+                        <div class="prt-image">
+                            <img src="./img/April New Month.png" alt="">
+                        </div>
+
+                        <div class="prt-desc">
+                            <h3>Seemesave</h3>
+                            <a href="#" class="btn secondary-btn sm">Read more</a>
+                        </div>
+                    </div>
+                    <div class="prt-card">
+                        <div class="prt-image">
+                            <img src="./img/Presentation – 1.png" alt="">
+                        </div>
+
+                        <div class="prt-desc">
+                            <h3>Seemesave</h3>
+                            <a href="#" class="btn secondary-btn sm">Read more</a>
+                        </div>
+                    </div>
+                    <div class="prt-card">
+                        <div class="prt-image">
+                            <img src="./img/Crypto UI Landing page.png" alt="">
+                        </div>
+
+                        <div class="prt-desc">
+                            <h3>Seemesave</h3>
+                            <a href="#" class="btn secondary-btn sm">Read more</a>
+                        </div>
+                    </div>
+                    <div class="prt-card">
+                        <div class="prt-image">
+                            <img src="./img/Tribe.png" alt="">
+                        </div>
+
+                        <div class="prt-desc">
+                            <h3>Seemesave</h3>
+                            <a href="#" class="btn secondary-btn sm">Read more</a>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </section>
