Added new files and code

--- a/index.html
+++ b/index.html
@@ -262,6 +262,14 @@
                     <div class="prt-card">
                         <div class="prt-image">
                             <img src="./img/Presentation.png" alt="">
+                            <div class="prt-overlay">
+                                <span class="prt-icon">
+                                    <i class="uil uil-search-plus"></i>
+                                </span>
+                                <a href="#" class="prt-icon">
+                                    <i class="uil uil-link-h"></i>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="prt-desc">
@@ -272,6 +280,14 @@
                     <div class="prt-card">
                         <div class="prt-image">
                             <img src="./img/07-Notebook-Mockup.png" alt="">
+                            <div class="prt-overlay">
+                                <span class="prt-icon">
+                                    <i class="uil uil-search-plus"></i>
+                                </span>
+                                <a href="#" class="prt-icon">
+                                    <i class="uil uil-link-h"></i>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="prt-desc">
@@ -282,6 +298,14 @@
                     <div class="prt-card">
                         <div class="prt-image">
                             <img src="./img/April New Month.png" alt="">
+                            <div class="prt-overlay">
+                                <span class="prt-icon">
+                                    <i class="uil uil-search-plus"></i>
+                                </span>
+                                <a href="#" class="prt-icon">
+                                    <i class="uil uil-link-h"></i>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="prt-desc">
@@ -292,6 +316,14 @@
                     <div class="prt-card">
                         <div class="prt-image">
                             <img src="./img/Presentation – 1.png" alt="">
+                            <div class="prt-overlay">
+                                <span class="prt-icon">
+                                    <i class="uil uil-search-plus"></i>
+                                </span>
+                                <a href="#" class="prt-icon">
+                                    <i class="uil uil-link-h"></i>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="prt-desc">
@@ -302,6 +334,14 @@
                     <div class="prt-card">
                         <div class="prt-image">
                             <img src="./img/Crypto UI Landing page.png" alt="">
+                            <div class="prt-overlay">
+                                <span class="prt-icon">
+                                    <i class="uil uil-search-plus"></i>
+                                </span>
+                                <a href="#" class="prt-icon">
+                                    <i class="uil uil-link-h"></i>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="prt-desc">
@@ -312,6 +352,14 @@
                     <div class="prt-card">
                         <div class="prt-image">
                             <img src="./img/Tribe.png" alt="">
+                            <div class="prt-overlay">
+                                <span class="prt-icon">
+                                    <i class="uil uil-search-plus"></i>
+                                </span>
+                                <a href="#" class="prt-icon">
+                                    <i class="uil uil-link-h"></i>
+                                </a>
+                            </div>
                         </div>
 
                         <div class="prt-desc">
