Added new files and code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./img/CoverIcon.png" type="image/x-icon">
     <!-- Scroll reveal library -->
     <script src="https://unpkg.com/scrollreveal"></script>
@@ -263,10 +263,10 @@
                         <div class="prt-image">
                             <img src="./img/Presentation.png" alt="">
                             <div class="prt-overlay">
-                                <span class="prt-icon">
+                                <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
-                                <a href="#" class="prt-icon">
+                                <a href="#" class="prt-icon" style="--i: .15s">
                                     <i class="uil uil-link-h"></i>
                                 </a>
                             </div>
@@ -281,10 +281,10 @@
                         <div class="prt-image">
                             <img src="./img/07-Notebook-Mockup.png" alt="">
                             <div class="prt-overlay">
-                                <span class="prt-icon">
+                                <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
-                                <a href="#" class="prt-icon">
+                                <a href="#" class="prt-icon" style="--i: .15s">
                                     <i class="uil uil-link-h"></i>
                                 </a>
                             </div>
@@ -299,10 +299,10 @@
                         <div class="prt-image">
                             <img src="./img/April New Month.png" alt="">
                             <div class="prt-overlay">
-                                <span class="prt-icon">
+                                <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
-                                <a href="#" class="prt-icon">
+                                <a href="#" class="prt-icon" style="--i: .15s">
                                     <i class="uil uil-link-h"></i>
                                 </a>
                             </div>
@@ -317,10 +317,10 @@
                         <div class="prt-image">
                             <img src="./img/Presentation – 1.png" alt="">
                             <div class="prt-overlay">
-                                <span class="prt-icon">
+                                <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
-                                <a href="#" class="prt-icon">
+                                <a href="#" class="prt-icon" style="--i: .15s">
                                     <i class="uil uil-link-h"></i>
                                 </a>
                             </div>
@@ -335,10 +335,10 @@
                         <div class="prt-image">
                             <img src="./img/Crypto UI Landing page.png" alt="">
                             <div class="prt-overlay">
-                                <span class="prt-icon">
+                                <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
-                                <a href="#" class="prt-icon">
+                                <a href="#" class="prt-icon" style="--i: .15s">
                                     <i class="uil uil-link-h"></i>
                                 </a>
                             </div>
@@ -353,10 +353,10 @@
                         <div class="prt-image">
                             <img src="./img/Tribe.png" alt="">
                             <div class="prt-overlay">
-                                <span class="prt-icon">
+                                <span class="prt-icon" style="--i: .0s">
                                     <i class="uil uil-search-plus"></i>
                                 </span>
-                                <a href="#" class="prt-icon">
+                                <a href="#" class="prt-icon" style="--i: .15s">
                                     <i class="uil uil-link-h"></i>
                                 </a>
                             </div>
@@ -381,7 +381,8 @@
 
 
     <!-- JavaScript file -->
-    <script src="script.js"></script>
+    
+    <script src="./js/script.js"></script>
 
 </body>
 </html>
